--- a/src/styles/shell_default.css
+++ b/src/styles/shell_default.css
@@ -277,6 +277,9 @@
         flex-basis: 0;
         flex-grow: 3;
     }
+    #ptx-navbar .button {
+        flex-grow: 1;
+    }
 }
 
 @media screen and (max-width: 600px) {
